# RAG-Comprehensive-System

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  docker-compose.yml  pyproject.toml  pytest.ini
.claude/commands/: _command_output_template.md  analyze-rag-component.md  benchmark-rag-performance.md  continue-rag-implementation.md  create-integration-test.md  create-rag-agent.md  debug-rag-query.md  document-api.md  generate-progress-report.md  handle-blocker.md  implement-domain-entity.md  manage-github-repo.md  optimize-embeddings.md  orchestrate-rag-development.md  refactor-code.md  search-rag-solutions.md  setup-development-env.md  test-orchestration-system.md  test-rag-pipeline.md  validate-architecture.md
.orchestration/results/: phase1-progress.md  session-2025-07-10-summary.md
.orchestration/state/: session-state.json
claude_implementation_guide/: 00_PROJECT_ROADMAP.md  01_PHASE1_CORE_INFRASTRUCTURE.md  02_PHASE2_ADVANCED_RETRIEVAL.md  03_PHASE3_MULTIMODAL_SELFRAG.md  04_PHASE4_PRODUCTION_OPTIMIZATION.md  05_TECHNICAL_ARCHITECTURE.md  06_API_DESIGN_GUIDE.md  07_TESTING_STRATEGY.md  08_DEPLOYMENT_GUIDE.md  09_MONITORING_OBSERVABILITY.md  10_SECURITY_BEST_PRACTICES.md  initial_prompt.txt
src/application/ports/: chunking_service.py  embedding_service.py  generation_service.py  parser_service.py
src/application/use_cases/: ingest_document.py  process_query.py
src/domain/entities/: document.py  query.py  retrieval_result.py
src/domain/events/: document_indexed.py  query_processed.py
src/domain/repositories/: document_repository.py  embedding_repository.py  vector_store_repository.py
src/domain/services/: evaluation_service.py  ranking_service.py  retrieval_strategy.py
src/domain/value_objects/: embedding.py  retrieval_metadata.py  similarity_score.py
src/infrastructure/persistence/postgresql/models/: __init__.py  document_model.py  query_model.py
src/infrastructure/persistence/postgresql/repositories/: document_repository_impl.py
src/presentation/api/: main.py
src/presentation/api/middleware/: error_handler.py  logging.py
src/presentation/api/v1/: __init__.py
src/presentation/api/v1/dependencies/: services.py
src/presentation/api/v1/routers/: documents.py  health.py  query.py
src/presentation/api/v1/schemas/: document.py  health.py  query.py
src/shared/config/: database.py  settings.py
tests/: conftest.py
tests/unit/domain/entities/: __init__.py  test_document.py  test_query.py  test_retrieval_result.py
tests/unit/domain/repositories/: __init__.py  test_document_repository.py  test_embedding_repository.py
tests/unit/domain/services/: test_evaluation_service.py  test_ranking_service.py  test_retrieval_strategy.py
tests/unit/domain/value_objects/: __init__.py  test_embedding.py  test_retrieval_metadata.py  test_similarity_score.py
tests/unit/presentation/api/: test_health.py
